--- a/html/about-us/contact-info1.html
+++ b/html/about-us/contact-info1.html
@@ -61,7 +61,7 @@
                 サムスンC&Tジャパンのホームページ<br class="mobile" />を訪問していただきありがとうございます。<br />質問内容を送っていただければ、速やかに回答いたします
             </p> 
         </section>
-        <section class="sub_cont contact" data-aos="fade-up" >
+        <section class="sub_cont contact" data-aos="fade-up" data-aos-delay="100">
             <p class="c_error_text" style="display: block;">すべて必須入力項目です。</p>
             <div class="form">
                 <div class="item first">
@@ -70,7 +70,7 @@
                         <dd>
                             <div class="c_radio">
                                 <input type="radio" id="お問い合わせ分類1" name="お問い合わせ分類" checked />
-                                <label for="お問い合わせ分類1" data-name="お問い合わせ分類1">問い合わせ</label>
+                                <label for="お問い合わせ分類1" data-name="お問い合わせ分類1">一般的なお問い合わせ</label>
                             </div>
                             <div class="c_radio">
                                 <input type="radio" id="お問い合わせ分類2" name="お問い合わせ分類"/>
