--- a/html/about-us/corporate-profile.html
+++ b/html/about-us/corporate-profile.html
@@ -64,12 +64,12 @@
                 <p>サムスン物産（韓国）の海外拠点の一つで<br class="mobile" />ある日本にて、70年の長い歴史を誇る、 <br/>化学、鉄鋼、素材、エネルギーなど様々な<br class="mobile" />分野にて未来価値を作り、 <br /><br />グローバル価値を創造する総合商社です。</p>
             </div>
         </section>
-        <section class="sub_cont corporate" data-aos="fade-up" data-aos-delay="300">
-            <div class="text">
+        <section class="sub_cont corporate">
+            <div class="text" data-aos="fade-up" data-aos-delay="100">
                 <b>サムスンＣ＆Ｔジャパン 株式会社</b>
                 <p>SAMSUNG C&T JAPAN CORPORATION</p>
             </div>
-            <div class="list">
+            <div class="list" data-aos="fade-up" data-aos-delay="300">
                 <div class="company_cont"> 
                     <dl>
                         <dt><span>創業</span></dt>
