--- a/html/about-us/our-philosophy.html
+++ b/html/about-us/our-philosophy.html
@@ -107,42 +107,42 @@
                 </dl>
             </div>
         </section> 
-        <section class="sub_cont philosophy3" data-aos="fade-up">
+        <section class="sub_cont philosophy3">
             <div class="text">
                 <b>核心価値</b>
                  <p>Samsungの企業精神の<br class="mobile" />中でも最も大事な部分であり、 <br />全社員の思考と行動に深く根付いている、 <br />Samsungが最も大切に<br class="mobile" />守ってきた信念です。</p>                
             </div>
             <div class="division">Samsungの核心価値</div>
             <ul class="item">
-                <li>
+                <li data-aos="fade-up"  data-aos-delay="100">
                     <div class="icon">
                         <img src="../../resources/img/sub/icon_philosophy1.svg" alt="人材 icon">
                     </div>
                     <b>人材</b>
                     <p>「企業は人なり」という信念に基づき、人材を大切にし、<br class="web" />存分に能力を発揮できる場を提供します。</p>
                 </li>
-                <li>
+                <li data-aos="fade-up"  data-aos-delay="300">
                     <div class="icon">
                         <img src="../../resources/img/sub/icon_philosophy2.svg" alt="最高志向 icon">
                     </div>
                     <b>最高志向</b>
                     <p>絶え間ない情 熱とチャレンジ精神で、<br class="web" />あらゆる面において世界最高となるために最善を尽くします。</p>
                 </li>
-                <li>
+                <li data-aos="fade-up"  data-aos-delay="500">
                     <div class="icon">
                         <img src="../../resources/img/sub/icon_philosophy3.svg" alt="変化先導 icon">
                     </div>
                     <b>変化先導</b>
                     <p>変わらなければ生き残れないという危機意識を持って、<br class="web" />迅速かつ主導的に変化と革新を実行します。</p>
                 </li>
-                <li>
+                <li data-aos="fade-up"  data-aos-delay="700">
                     <div class="icon">
                         <img src="../../resources/img/sub/icon_philosophy4.svg" alt="正道経営 icon">
                     </div>
                     <b>正道経営</b>
                     <p>真っ直ぐな心と正しい行動によって名誉と品位を守り、全てのことにお<br class="web" />いて常に正道を追求します。</p>
                 </li>
-                <li>
+                <li data-aos="fade-up"  data-aos-delay="900">
                     <div class="icon">
                         <img src="../../resources/img/sub/icon_philosophy5.svg" alt="相生追求 icon">
                     </div>
@@ -151,14 +151,14 @@
                 </li>
             </ul>
         </section>
-        <section class="sub_cont philosophy4" data-aos="fade-up">
+        <section class="sub_cont philosophy4">
             <div class="text">
                 <b>5大経営原則</b>
                  <p>Samsungは、世界をリードする企業として<br class="mobile" />の企業の社会的責任に対する意志<br class="web" />を、 <br class="mobile" />「5大経営原則」として <br class="mobile" />2005年に発表しました。 <br />これらは、法的および倫理的な基準に<br class="mobile" />準拠し、企業の社会的責任を<br class="web" />果たすための<br class="mobile" />グローバル行動規範の礎となっています。</p>                
             </div>
             <div class="division">Samsungの経営理念</div>
             <ul class="accordion">
-                <li>
+                <li data-aos="fade-up"  data-aos-delay="100">
                     <div class="title" onclick="toggleAccodion(this)">
                         <a onclick="javascript:void(0);"><span>01</span>法と倫理を遵守する</a>
                         <button type="button" class="icon icon_toggle open">menu_close</button>
@@ -209,7 +209,7 @@
                     </div>
                 </li>
 
-                <li>
+                <li data-aos="fade-up"  data-aos-delay="200">
                     <div class="title" onclick="toggleAccodion(this)">
                         <a onclick="javascript:void(0);"><span>02</span>健全な組織文化を維持する</a>
                         <button type="button" class="icon icon_toggle open">menu_close</button>
@@ -251,7 +251,7 @@
                     </div>
                 </li>
                 
-                <li>
+                <li data-aos="fade-up"  data-aos-delay="300">
                     <div class="title" onclick="toggleAccodion(this)">
                         <a onclick="javascript:void(0);"><span>03</span>顧客・株主・社員を尊重する</a>
                         <button type="button" class="icon icon_toggle open">menu_close</button>
@@ -289,7 +289,7 @@
                         </dl>
                     </div>
                 </li>
-                <li>
+                <li data-aos="fade-up"  data-aos-delay="400">
                     <div class="title" onclick="toggleAccodion(this)">
                         <a onclick="javascript:void(0);"><span>04</span>環境·安全·健康を重視する</a>
                         <button type="button" class="icon icon_toggle open">menu_close</button>
@@ -317,7 +317,7 @@
                         </dl>
                     </div>
                 </li>
-                <li>
+                <li data-aos="fade-up"  data-aos-delay="500">
                     <div class="title" onclick="toggleAccodion(this)">
                         <a onclick="javascript:void(0);"><span>05</span>グローバル企業の社員として<br class="mobile" />社会的責任を果たす</a>
                         <button type="button" class="icon icon_toggle open">menu_close</button>
