--- a/html/business/energy.html
+++ b/html/business/energy.html
@@ -41,7 +41,7 @@
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont sub_title2" data-aos="fade" data-aos-duration="2000">         
+        <section class="sub_cont sub_title2 energy">         
             <div class="breadcrumbs" role="navigation">
                 <ol>
                     <li>
@@ -55,29 +55,37 @@
                     </li>
                 </ol>
             </div>
-            <h2 class="title">エネルギー</h2>
+            <h2 class="title" data-aos="fade" data-aos-duration="2000">エネルギー</h2>
             <span class="sub">Energy</span>
-            <p class="explain">エネルギー事業は、未来に向けた持続可能な社会の実現を目指し、 再生可能エネルギーに関わる事業に取り組んでいます。 　　　　　 燃料ビジネスでは、化石系燃料代替エネルギーの確保と温室効果ガス削減のために PKSやウッドペレット等のバイオマス燃料の輸入販売に従事しクリーンエネルギーの普及に寄与して行きます。</p>
-            <a href="">お問い合わせ</a>
+            <p class="explain" data-aos="fade" data-aos-delay="300">エネルギー事業は、未来に向けた持続可能<br class="mobile" />な社会の実現を目指し、 <br class="web" />再生可能エネル<br class="mobile" />ギーに関わる事業に取り組んでいます。 <br />燃料ビジネスでは、化石系燃料代替エネル<br class="mobile" />ギーの確保と温室効果ガス削減のために <br class="mobile" />PKSやウッドペレット<br class="web" />等のバイオマス燃料<br class="mobile" />の輸入販売に従事しクリーンエネルギーの<br class="mobile" />普及に寄与して行きます。</p>
+            <div class="c_btn_wrap" data-aos="fade-up" data-aos-delay="300">
+                <a href="/html/about-us/contact-info1.html" class="c_btn2">お問い合わせ</a>
+            </div>
         </section>
-        <section class="sub_cont2" data-aos="fade-up">
+        <section class="sub_cont business energy">
             <b class="title">品目</b>
             <ul>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="100">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_energy1.jpg" alt="energy image" title="energy image"/>
+                        <img src="../../resources/img/sub/img_energy_item1.jpg" alt="energy image" title="energy image"/>
                     </div>
-                    <b>PKS/Wood pellet</b>
-                    <p>環境にやさしいエネルギー燃料として注目されているPKS(パームヤシ種殻）やウッドペレットを東南アジアより調達して、日本各地のバイオマス発電所に販売しています。
-                    </p>
-                    <a href="">行動規範</a>
+                    <div class="text">
+                        <b>PKS/Wood pellet</b>
+                        <p>環境にやさしいエネルギー燃料として注目されて<br/>いるPKS(パームヤシ種殻）やウッドペレットを東<br/>南アジアより調達して、日本各地のバイオマス発<br/>電所に販売しています。
+                        </p>
+                        <div class="c_btn_wrap">
+                            <a href="../../resources/data/行動規範.pdf" class="c_btn2" download>行動規範</a>
+                        </div>
+                    </div>
                 </li>
-                <li>
-                    <ul class="sub_list">
-                        <li>GGL認証(Green Gold Label)取得 当社は2022年10月にバイオマス燃料の第三者認証であるGGL認証を取得しました。</li>
-                        <li>一般財団法人日本ガス機器検査協会　発電利用に供する木質バイオマスの証明に係る事業社認定　JIA19-012</li>
-                    </ul>
-                    <img src="../../resources/img/sub/img_energy2.jpg" alt="energy image" title="energy image"/>
+                <li data-aos="fade-up" data-aos-delay="300">
+                    <div class="icon">
+                        <ul class="sub_list">
+                            <li>GGL認証(Green Gold Label)取得 <br />当社は2022年10月にバイオマス燃料の<br class="mobile" />第三者認証であるGGL<br class="web" />認証を<br class="mobile" />取得しました。</li>
+                            <li>一般財団法人日本ガス機器検査協会<br class="mobile" />発電利用に供する<br class="web" />木質バイオマスの<br class="mobile" />証明に係る事業社認定 JIA19-012</li>
+                        </ul>
+                        <img src="../../resources/img/sub/img_energy_item2.png" alt="energy image" title="energy image"/>
+                    </div>
                 </li>
             </ul> 
         </section>
