--- a/html/footer.html
+++ b/html/footer.html
@@ -44,7 +44,7 @@
                 <ul class="depth2">
                     <li><a href="">ニュース</a></li>
                     <li><a href="">広報資料</a></li>
-                    <li><a href="">財務データ</a></li>
+                    <li><a href="https://www.samsungcnt.com/eng/ir/financial-info/financial-snapshot.do" target="_blank">財務データ</a></li>
                 </ul>
             </li>
         </ul>
