--- a/html/header.html
+++ b/html/header.html
@@ -3,8 +3,8 @@
     <ul>
         <li><a href="/html/main.html">日本語</a></li>
         <li><a href="/html/en/main.html">English</a ></li> 
-        <li><a href="https://trading.samsungcnt.com/eng/main.do">SAMSUNG C&T</a></li>
-        <li class="web"><a href="https://trading.samsungcnt.com/eng/company/globalnetwork.do">GLOBAL NETWORK</a></li>
+        <li><a href="https://trading.samsungcnt.com/eng/main.do" target="_blank">SAMSUNG C&T</a></li>
+        <li class="web"><a href="https://trading.samsungcnt.com/eng/company/globalnetwork.do" target="_blank">GLOBAL NETWORK</a></li>
     </ul>
 </div>
 <nav class="gnb web">            
@@ -78,7 +78,7 @@
             <ul>
                 <li><a href="">ニュース</a></li>
                 <li><a href="">広報資料</a></li>
-                <li><a href="">財務データ</a></li>
+                <li><a href="https://www.samsungcnt.com/eng/ir/financial-info/financial-snapshot.do" target="_blank">財務データ</a></li>
             </ul>
         </div>
     </div>
@@ -106,7 +106,7 @@
         <ul>
             <li>
                 <div class="depth1">
-                    <a href="/">HOME</a>
+                    <a href="/html/main.html">HOME</a>
                 </div>
             </li>
             <li>
@@ -167,7 +167,7 @@
                 <ul class="depth2">
                     <li><a href="">ニュース</a></li>
                     <li><a href="">広報資料</a></li>
-                    <li><a href="">財務データ</a></li>
+                    <li><a href="https://www.samsungcnt.com/eng/ir/financial-info/financial-snapshot.do" target="_blank">財務データ</a></li>
                 </ul>
             </li>
         </ul> 
