--- a/html/index.html
+++ b/html/index.html
@@ -136,7 +136,7 @@
 
 <body>
     <div class="flex">
-        <span>Update : 2024-03-23</span>
+        <span>Update : 2024-03-24</span>
         <h1 class="title">상사부문 동경법인 퍼블리싱</h1>        
 
         <table class="table">
@@ -229,16 +229,16 @@
                 <tr>
                     <td>Business</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td colspan="4">
+                        section 태그 2개에  페이지 이름이 붙습니다. class명 : chemicals, steel, material, energy
+                        <img src="/resources/img/info_business.jpg" style="max-width: 60%;">
+                    </td>
                 </tr>
                 <tr>
                     <td></td>
                     <td>chemicals</td>
                     <td><a href="/html/business/chemicals.html" target="_blank"> /html/business/chemicals.html</a></td>
-                    <td><button class=""></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -246,7 +246,7 @@
                     <td></td>
                     <td>steel</td>
                     <td><a href="/html/business/steel.html" target="_blank"> /html/business/steel.html</a></td>
-                    <td><button class=""></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -254,7 +254,7 @@
                     <td></td>
                     <td>industrial-materials</td>
                     <td><a href="/html/business/industrial-materials.html" target="_blank"> /html/business/industrial-materials.html</a></td>
-                    <td><button class=""></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -262,7 +262,7 @@
                     <td></td>
                     <td>energy</td>
                     <td><a href="/html/business/energy.html" target="_blank"> /html/business/energy.html</a></td>
-                    <td><button class=""></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
                     <td></td>
                 </tr>
