--- a/html/main.html
+++ b/html/main.html
@@ -72,7 +72,7 @@
                     <div class="text">
                         <b class="title">化学</b>
                         <div class="sub">化学事業は、サムスン物産の <br class="mobile"/>インフラとグローバ<br class="web" />ルネットワークを通じた <br class="mobile"/>化学品全般のトレーディ<br class="web" />ングにより、 <br class="mobile"/>お客様のニーズに応えながら付加価<br class="web" />値の <br class="mobile"/>高いソリューションを提供いたします。</div>
-                        <a href="/html/business/chemicals" class="btn_link">Learn more</a>
+                        <a href="/html/business/chemicals.html" class="btn_link">Learn more</a>
                     </div>
                 </li>
                 <li data-aos="fade-up">
@@ -82,7 +82,7 @@
                     <div class="text">
                         <b class="title">鉄鋼</b>
                         <div class="sub">鉄鋼事業は、50年以上にわたる <br class="mobile"/>鉄鋼トレーディングの <br />経験と長年培ったノウハウや業界知識を持ち、<br />30か国以上に及ぶ幅広い地域や分野で <br class="mobile"/>事業を展開しています。</div>
-                        <a href="/html/business/steel" class="btn_link">Learn more</a>
+                        <a href="/html/business/steel.html" class="btn_link">Learn more</a>
                     </div>
                     
                 </li>
@@ -93,7 +93,7 @@
                     <div class="text">
                         <b class="title">素材</b>
                         <div class="sub">素材事業は、高品質、高性能な技術優位性の <br />高い日本の電子部品・素材を <br class="mobile"/>サムスングループ及び協<br class="web" />力会社様へ提供してい <br class="mobile"/>ます。<br class="web" />また、サムスングループ以外の海外企業<br class="mobile"/>との取引及び<br class="web" />韓国本社と連携した <br class="mobile"/>Re-Marketing / Recycle事業、<br class="web" />半導体素材の <br class="mobile"/>現地化事業など、幅広い事業を行っています。</div>
-                        <a href="/html/business/industrial-materials" class="btn_link">Learn more</a>
+                        <a href="/html/business/industrial-materials.html" class="btn_link">Learn more</a>
                     </div>
                 </li>
                 <li data-aos="fade-up">
@@ -104,7 +104,7 @@
                     <div class="text">
                         <b class="title">エネルギー</b>
                         <div class="sub">エネルギー事業は、未来に向けた持続可能な <br class="mobile"/>社会の<br class="web" />実現を目指し、再生可能エネルギーに <br class="mobile"/>関わる<br class="web" />事業に取り組んでいます。</div>
-                        <a href="/html/business/energy" class="btn_link">Learn more</a>
+                        <a href="/html/business/energy.html" class="btn_link">Learn more</a>
                     </div>
                 </li>
             </ul>
