--- a/html/utils/utils.html
+++ b/html/utils/utils.html
@@ -201,73 +201,15 @@
                                         style="color: #ff3399">div</span><span style="color: #f0f0f0">&gt;</span>
                                 </div>
                             </div>
-                            <div
-                                style="text-align: right; margin-top: -13px; margin-right: 5px; font-size: 9px; font-style: italic">
-                                <a href="http://colorscripter.com/info#e" target="_blank"
-                                    style="color: #4f4f4f; text-decoration: none">Colored by Color Scripter</a>
-                            </div>
-                        </td>
-                        <td style="vertical-align: bottom; padding: 0 2px 4px 0">
-                            <a href="http://colorscripter.com/info#e" target="_blank"
-                                style="text-decoration: none; color: white"><span
-                                    style="font-size: 9px; word-break: normal; background-color: #4f4f4f; color: white; border-radius: 10px; padding: 1px">cs</span></a>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </li>
-    </ul>
-    <ul class="item">
-        <li>
-            <div class="d_flex">
-                <div class="c_radio single ">
-                    <input type="radio" id="radios1" name="radio-gruop-s" checked />
-                    <label for="radios1"></label>
-                </div>
-
-                <div class="c_radio single">
-                    <input type="radio" id="radios2" name="radio-gruop-s" />
-                    <label for="radios2"></label>
-                </div>
-            </div>
-        </li>
-        <li>
-            <div class="colorscripter-code"
-                style="color: #f0f0f0; font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace !important; position: relative !important; overflow: auto">
-                <table class="colorscripter-code-table"
-                    style="margin: 0; padding: 0; border: none; background-color: #272727; border-radius: 4px"
-                    cellspacing="0" cellpadding="0">
-                    <tr>
-                        <td style="padding: 6px; border-right: 2px solid #4f4f4f">
-                            <div style="
-                                        margin: 0;
-                                        padding: 0;
-                                        word-break: normal;
-                                        text-align: right;
-                                        color: #aaa;
-                                        font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace !important;
-                                        line-height: 130%;
-                                    ">
-                                <div style="line-height: 130%">1</div>
-                                <div style="line-height: 130%">2</div>
-                                <div style="line-height: 130%">3</div>
-                                <div style="line-height: 130%">4</div>
-                                <div style="line-height: 130%">5</div>
-                                <div style="line-height: 130%">6</div>
-                                <div style="line-height: 130%">7</div>
-                                <div style="line-height: 130%">8</div>
-                                <div style="line-height: 130%">9</div>
-                            </div>
-                        </td>
-                        <td style="padding: 6px 0; text-align: left">
+                            <div>&nbsp;</div>
                             <div
                                 style="margin: 0; padding: 0; color: #f0f0f0; font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace !important; line-height: 130%">
                                 <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                                     <span style="color: #f0f0f0">&lt;</span><span
                                         style="color: #ff3399">div</span>&nbsp;<span
                                         style="color: #a8ff58">class</span>=<span
-                                        style="color: #ffd500">"c_radio&nbsp;single"</span><span
-                                        style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
+                                        style="color: #ffd500">"c_radio disabled"</span><span style="color: #a8ff58"></span><span
+                                        style="color: #f0f0f0">&gt;</span>
                                 </div>
                                 <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                                     &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span
@@ -275,32 +217,32 @@
                                         style="color: #a8ff58">type</span>=<span
                                         style="color: #ffd500">"radio"</span><span
                                         style="color: #a8ff58"></span>&nbsp;<span style="color: #a8ff58">id</span>=<span
-                                        style="color: #ffd500">"radios1"</span><span
+                                        style="color: #ffd500">"radio1"</span><span
                                         style="color: #a8ff58"></span>&nbsp;<span
                                         style="color: #a8ff58">name</span>=<span
-                                        style="color: #ffd500">"radio-gruop-s"</span><span
+                                        style="color: #ffd500">"radio-gruop" disabled </span><span
                                         style="color: #a8ff58">/</span><span style="color: #f0f0f0">&gt;</span>
                                 </div>
                                 <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                                     &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span
                                         style="color: #ff3399">label</span>&nbsp;<span
                                         style="color: #a8ff58">for</span>=<span
-                                        style="color: #ffd500">"radios1"</span><span style="color: #a8ff58"></span><span
-                                        style="color: #f0f0f0">&gt;</span><span style="color: #f0f0f0">&lt;</span><span
-                                        style="color: #f0f0f0">/</span><span style="color: #ff3399">label</span><span
-                                        style="color: #f0f0f0">&gt;</span>
+                                        style="color: #ffd500">"radio1"</span><span style="color: #a8ff58"></span><span
+                                        style="color: #f0f0f0">&gt;</span>text1<span
+                                        style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span
+                                        style="color: #ff3399">label</span><span style="color: #f0f0f0">&gt;</span>
                                 </div>
                                 <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                                     <span style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span
                                         style="color: #ff3399">div</span><span style="color: #f0f0f0">&gt;</span>
                                 </div>
-                                <div style="padding: 0 6px; white-space: pre; line-height: 130%">&nbsp;</div>
+                                <div style="padding: 0 6px; white-space: pre; line-height: 130%">&nbsp;&nbsp;</div>
                                 <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                                     <span style="color: #f0f0f0">&lt;</span><span
                                         style="color: #ff3399">div</span>&nbsp;<span
                                         style="color: #a8ff58">class</span>=<span
-                                        style="color: #ffd500">"c_radio&nbsp;single"</span><span
-                                        style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
+                                        style="color: #ffd500">"c_radio disabled"</span><span style="color: #a8ff58"></span><span
+                                        style="color: #f0f0f0">&gt;</span>
                                 </div>
                                 <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                                     &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span
@@ -308,20 +250,20 @@
                                         style="color: #a8ff58">type</span>=<span
                                         style="color: #ffd500">"radio"</span><span
                                         style="color: #a8ff58"></span>&nbsp;<span style="color: #a8ff58">id</span>=<span
-                                        style="color: #ffd500">"radios2"</span><span
+                                        style="color: #ffd500">"radio2"</span><span
                                         style="color: #a8ff58"></span>&nbsp;<span
                                         style="color: #a8ff58">name</span>=<span
-                                        style="color: #ffd500">"radio-gruop-s"</span><span
+                                        style="color: #ffd500">"radio-gruop" disabled </span><span
                                         style="color: #a8ff58">/</span><span style="color: #f0f0f0">&gt;</span>
                                 </div>
                                 <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                                     &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span
                                         style="color: #ff3399">label</span>&nbsp;<span
                                         style="color: #a8ff58">for</span>=<span
-                                        style="color: #ffd500">"radios2"</span><span style="color: #a8ff58"></span><span
-                                        style="color: #f0f0f0">&gt;</span><span style="color: #f0f0f0">&lt;</span><span
-                                        style="color: #f0f0f0">/</span><span style="color: #ff3399">label</span><span
-                                        style="color: #f0f0f0">&gt;</span>
+                                        style="color: #ffd500">"radio2"</span><span style="color: #a8ff58"></span><span
+                                        style="color: #f0f0f0">&gt;</span>text2<span
+                                        style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span
+                                        style="color: #ff3399">label</span><span style="color: #f0f0f0">&gt;</span>
                                 </div>
                                 <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                                     <span style="color: #f0f0f0">&lt;</span><span style="color: #f0f0f0">/</span><span
@@ -388,7 +330,7 @@
                         <td style="padding: 6px 0; text-align: left">
                             <div style="margin: 0; padding: 0; color: #f0f0f0; font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace !important; line-height: 130%">
                                 <div style="padding: 0 6px; white-space: pre; line-height: 130%">
-                                    <span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">div</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_check&nbsp;large"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
+                                    <span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">div</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_check&nbsp;"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
                                 </div>
                                 <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                                     &nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">input</span>&nbsp;<span style="color: #a8ff58">type</span>=<span style="color: #ffd500">"checkbox"</span><span style="color: #a8ff58"></span>&nbsp;<span style="color: #a8ff58">id</span>=<span style="color: #ffd500">"check_L1"</span><span style="color: #a8ff58">/</span><span style="color: #f0f0f0">&gt;</span>
@@ -517,7 +459,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">div</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_text"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
                     </div>
                     <div style="background-color: #303030; padding: 0 6px; white-space: pre; line-height: 130%">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">label</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_label&nbsp;large"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">label</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_label&nbsp;"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
                     </div>
                     <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">input</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_txt-input"</span>&nbsp;<span style="color: #a8ff58">type</span>=<span style="color: #ffd500">"text"</span><span style="color: #a8ff58"></span>&nbsp;<span style="color: #a8ff58">placeholder</span>=<span style="color: #ffd500">"placeholder"</span><span style="color: #a8ff58"></span><span style="color: #a8ff58"></span>&nbsp;<span style="color: #a8ff58">/</span><span style="color: #f0f0f0">&gt;</span>
@@ -578,7 +520,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">div</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_text&nbsp;disabled"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
                     </div>
                     <div style="background-color: #303030; padding: 0 6px; white-space: pre; line-height: 130%">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">label</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_label&nbsp;large"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">label</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_label&nbsp;"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
                     </div>
                     <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">input</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_txt-input"</span>&nbsp;<span style="color: #a8ff58">type</span>=<span style="color: #ffd500">"text"</span><span style="color: #a8ff58"></span>&nbsp;<span style="color: #a8ff58">placeholder</span>=<span style="color: #ffd500">"placeholder"</span><span style="color: #a8ff58"></span>&nbsp;<span style="color: #a8ff58">disabled</span>&nbsp;<span style="color: #a8ff58">/</span><span style="color: #f0f0f0">&gt;</span>
@@ -641,7 +583,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">div</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_text&nbsp;error"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
                     </div>
                     <div style="background-color: #303030; padding: 0 6px; white-space: pre; line-height: 130%">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">label</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_label&nbsp;large"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">label</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_label&nbsp;"</span><span style="color: #a8ff58"></span><span style="color: #f0f0f0">&gt;</span>
                     </div>
                     <div style="padding: 0 6px; white-space: pre; line-height: 130%">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: #f0f0f0">&lt;</span><span style="color: #ff3399">input</span>&nbsp;<span style="color: #a8ff58">class</span>=<span style="color: #ffd500">"c_txt-input"</span>&nbsp;<span style="color: #a8ff58">type</span>=<span style="color: #ffd500">"text"</span><span style="color: #a8ff58"></span>&nbsp;<span style="color: #a8ff58">placeholder</span>=<span style="color: #ffd500">"placeholder"</span><span style="color: #a8ff58"></span>&nbsp;<span style="color: #a8ff58">/</span><span style="color: #f0f0f0">&gt;</span>
