--- a/html/about-us/history.html
+++ b/html/about-us/history.html
@@ -58,7 +58,7 @@
             <h2 class="title">沿革</h2>
             <span class="sub">History</span>
         </section>
-        <section class="sub_cont history1">
+        <section class="sub_cont history1" data-aos="fade-up" data-aos-delay="100">
             <div class="text">
                 <p>サムスングループ初の海外拠点で <br class="mobile" />あるサムスンＣ＆Ｔジャパンは、 <br/>1953年から日本で事業を展開し日本と韓国<br class="mobile" />を結ぶ掛け橋の役割を果たしてきました。 <br />サムスンＣ＆Ｔジャパンは、 <br class="mobile" />この70年間の長い経験を基に事業での力量<br class="mobile" />と役割を強化して<br class="web" />グローバルビジネスの中<br class="mobile" />心拠点となろうとしています。</p></div>
             <div class="slide">
@@ -102,7 +102,7 @@
         </section>
         
         <section class="sub_cont history2">
-            <dl>
+            <dl data-aos="fade-up" data-aos-delay="100">
                 <dt>2023</dt>
                 <dd> 
                     <ul>
@@ -110,7 +110,7 @@
                     </ul>
                 </dd>
             </dl>
-            <dl>
+            <dl data-aos="fade-up" data-aos-delay="300">
                 <dt>2013</dt>
                 <dd> 
                     <ul>
@@ -118,7 +118,7 @@
                     </ul>
                 </dd>
             </dl>
-            <dl>
+            <dl data-aos="fade-up" data-aos-delay="500">
                 <dt>2012</dt>
                 <dd> 
                     <ul>
@@ -127,7 +127,7 @@
                     </ul>
                 </dd>
             </dl>
-            <dl>
+            <dl data-aos="fade-up" data-aos-delay="700">
                 <dt>2003</dt>
                 <dd> 
                     <ul>
@@ -135,7 +135,7 @@
                     </ul>
                 </dd>
             </dl>
-            <dl>
+            <dl data-aos="fade-up" data-aos-delay="900">
                 <dt>1998</dt>
                 <dd> 
                     <ul>
@@ -143,7 +143,7 @@
                     </ul>
                 </dd>
             </dl>
-            <dl>
+            <dl data-aos="fade-up" data-aos-delay="1100">
                 <dt>1993</dt>
                 <dd> 
                     <ul>
@@ -151,7 +151,7 @@
                     </ul>
                 </dd>
             </dl>
-            <dl>
+            <dl data-aos="fade-up" data-aos-delay="1300">
                 <dt>1989</dt>
                 <dd> 
                     <ul>
@@ -159,7 +159,7 @@
                     </ul>
                 </dd>
             </dl>
-            <dl>
+            <dl data-aos="fade-up" data-aos-delay="1500">
                 <dt>1975</dt>
                 <dd> 
                     <ul>
@@ -167,7 +167,7 @@
                     </ul>
                 </dd>
             </dl>
-            <dl>
+            <dl data-aos="fade-up" data-aos-delay="1700">
                 <dt>1953</dt>
                 <dd> 
                     <ul>
