--- a/html/about-us/office-locations.html
+++ b/html/about-us/office-locations.html
@@ -58,18 +58,22 @@
             <h2 class="title">アクセス</h2>
             <span class="sub">Office Locations</span>
         </section>      
-        <section class="sub_cont locations" data-aos="fade-up" data-aos-delay="300">
-            <b>本社</b>
-            <p>〒108-0075<br>東京都港区港南二丁目16番4号 <br/>品川グランドセントラルタワー 6階</p>            
-            <p>
-                <b>最寄駅</b>
-                JR 品川駅 港南口 よりスカイウェイにて直結 徒歩 <br class="mobile" />3 分 <br />京浜急行 品川駅より 徒歩 6 分
-            </p>
-            <img src="../../resources/img/sub/img_locations_bg.jpg" alt="locations background image" title="locations background image">
+        <section class="sub_cont locations" >
+            <div class="info" data-aos="fade-up" data-aos-delay="100">
+                <b>本社</b>
+                <p>〒108-0075<br>東京都港区港南二丁目16番4号 <br/>品川グランドセントラルタワー 6階</p>            
+                <p>
+                    <b>最寄駅</b>
+                    JR 品川駅 港南口 よりスカイウェイにて直結 徒歩 <br class="mobile" />3 分 <br />京浜急行 品川駅より 徒歩 6 分
+                </p>
+            </div>
+            <img src="../../resources/img/sub/img_locations_bg.jpg" alt="locations background image" title="locations background image" data-aos="fade-up" data-aos-delay="300"/>
         </section>             
-        <section class="sub_cont locations" data-aos="fade-up" data-aos-delay="300">
-            <b>大阪 支店</b>
-            <p>〒530-0002<br>大阪府大阪市北区曽根崎新地1-13-22</p>            
+        <section class="sub_cont locations">
+            <div class="info" data-aos="fade-up" >
+                <b>大阪 支店</b>
+                <p>〒530-0002<br>大阪府大阪市北区曽根崎新地1-13-22</p>    
+            </div>        
         </section>
     </div>
     
