--- a/html/about-us/presidents-message.html
+++ b/html/about-us/presidents-message.html
@@ -58,11 +58,11 @@
             <h2 class="title">社長メッセージ</h2>
             <span class= "sub">CEO Message</span>
         </section>     
-        <section class="sub_cont ceo" data-aos="fade-up" data-aos-delay="300">
-            <div class="bg">
+        <section class="sub_cont ceo">
+            <div class="bg" data-aos="fade-up" data-aos-delay="100">
                 <p>化学、鉄鋼、素材、エネルギーの分野を<br class="web" />中心に積極的に挑戦をしながら事業を展開し、<br class="web" />持続的な成長を目指してまいります。</p>
             </div>
-            <div class="text">
+            <div class="text" data-aos="fade-up" data-aos-delay="300">
                 <p>平素は格別のお引き立てを賜り、誠にありがとうございます。</p>
                 <p>弊社は、1953年に日本での事業を開始して70年以上もの間、「人材と技術をもとに、<br class="web" />最高の製品とサービスを創り出し、人類社会に貢献する。」というSamsungの<br class="web" />経営理念のもと、お客様のニーズに応じ新たな価値を創造し成長してまいりました。</p>
                 <p>現在の事業環境は、地政学的リスクの長期化による経済情勢や金融市場の<br class="web" />不安定さに加え、円安や物価上昇による消費影響が深刻化するなど、<br class="web" />先行きの不透明な状況が続いております。 <br class="web" />このように変わりゆく厳しい環境下においても、化学、鉄鋼、素材、エネルギーの<br class="web" />分野を中心に積極的に挑戦をしながら事業を展開し、持続的な成長を目指して<br class="web" />まいります。</p>
