--- a/html/business/chemicals.html
+++ b/html/business/chemicals.html
@@ -41,7 +41,7 @@
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont sub_title2" data-aos="fade" data-aos-duration="2000">         
+        <section class="sub_cont sub_title2 chemical" >         
             <div class="breadcrumbs" role="navigation">
                 <ol>
                     <li>
@@ -55,58 +55,70 @@
                     </li>
                 </ol>
             </div>
-            <h2 class="title">化学</h2>
+            <h2 class="title" data-aos="fade" data-aos-duration="2000">化学</h2>
             <span class="sub">chemical</span>
-            <p class="explain">化学事業は、サムスン物産のインフラとグローバルネットワークを 通じた化学品全般のトレーディングにより、お客様のニーズに応えながら 付加価値の高いソリューションを提供いたします。</p>
-            <a href="">お問い合わせ</a>
-            <div class="info">
-                <dl>
+            <p class="explain" data-aos="fade" data-aos-delay="300">化学事業は、サムスン物産のインフラと<br class="mobile" />グローバルネットワークを <br class="web" />通じた化学品<br class="mobile" />全般のトレーディングにより、<br class="mobile" />お客様のニーズに応えながら <br class="web" />付加価値の<br class="mobile" />高いソリューションを提供いたします。</p>
+            <div class="c_btn_wrap" data-aos="fade-up" data-aos-delay="300">
+                <a href="/html/about-us/contact-info1.html" class="c_btn2" data-aos="fade" data-aos-delay="500">お問い合わせ</a>
+            </div>
+            <div class="info" data-aos="fade" data-aos-delay="500">
+                <dl data-aos="fade-up" data-aos-delay="800">
                     <dt>輸出事業</dt>
-                    <dd>韓国、ベトナム、米国などにて保有するインフラと販売ネットワークを活用し、 競争力のある日本の化学品を供給し、各国の需要を支えています。</dd>
+                    <dd>韓国、ベトナム、米国などにて保有するイ<br class="mobile" />ンフラと販売ネットワークを活用し、<br>競争力のある日本の化学品を供給し、各国<br class="mobile" />の需要を支えています。</dd>
                 </dl>
-                <dl>
+                <dl data-aos="fade-up" data-aos-delay="1100">
                     <dt>輸入事業</dt>
-                    <dd>日本化学産業のアンバランスに起因するお客様のニーズを 満たすべく韓国などから競争力のある基礎原料をご提供しております。 </dd>
+                    <dd>日本化学産業のアンバランスに起因する<br class="mobile" />お客様のニーズを <br class="web" />満たすべく韓国などから競争力のある基礎原料をご提供しております。 </dd>
                 </dl>
             </div>
         </section>
-        <section class="sub_cont2" data-aos="fade-up">
+        <section class="sub_cont business chemical" data-aos="fade-up">
             <b class="title">品目</b>
             <ul>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="100">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_chemical1.jpg" alt="chemical image" title="chemical image" />
+                        <img src="../../resources/img/sub/img_chemical_item1.jpg" alt="chemical image" title="chemical image" />
                     </div>
-                    <b>C1ケミカル</b>
-                    <p>メタノール、アンモニア</p>
+                    <div class="text">
+                        <b>C1ケミカル</b>
+                        <p>メタノール、アンモニア</p>
+                    </div>
                 </li>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="200">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_chemical2.jpg" alt="chemical image" title="chemical image" />
+                        <img src="../../resources/img/sub/img_chemical_item2.jpg" alt="chemical image" title="chemical image" />
                     </div>
-                    <b>機能化学品</b>
-                    <p>MEK、MMA、フェノール、アセトン、 ビスフェノールＡ、エポキシ樹脂</p>
+                    <div class="text">
+                        <b>機能化学品</b>
+                        <p>MEK、MMA、フェノール、アセトン、 <br />ビスフェノールＡ、エポキシ樹脂</p>
+                    </div>
                 </li>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="300">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_chemical3.jpg" alt="chemical image" title="chemical image" />
+                        <img src="../../resources/img/sub/img_chemical_item3.jpg" alt="chemical image" title="chemical image" />
                     </div>
-                    <b>無機化学品</b>
-                    <p>ソーダ灰</p>
+                    <div class="text">
+                        <b>無機化学品</b>
+                        <p>ソーダ灰</p>
+                    </div>
                 </li>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="400">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_chemical4.jpg" alt="chemical image" title="chemical image" />
+                        <img src="../../resources/img/sub/img_chemical_item4.jpg" alt="chemical image" title="chemical image" />
                     </div>
-                    <b>鉱山用化学品</b>
-                    <p>青化ソーダ、OTR</p>
+                    <div class="text">
+                        <b>鉱山用化学品</b>
+                        <p>青化ソーダ、OTR</p>
+                    </div>
                 </li>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="500">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_chemical5.jpg" alt="chemical image" title="chemical image" />
+                        <img src="../../resources/img/sub/img_chemical_item5.jpg" alt="chemical image" title="chemical image" />
                     </div>
+                    <div class="text">
                     <b>肥料原料</b>
                     <p>硫安、硝酸、MOP</p>
+                    </div>
                 </li>
             </ul> 
         </section>
