--- a/html/business/industrial-materials.html
+++ b/html/business/industrial-materials.html
@@ -41,7 +41,7 @@
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont sub_title2" data-aos="fade" data-aos-duration="2000">         
+        <section class="sub_cont sub_title2 material">         
             <div class="breadcrumbs" role="navigation">
                 <ol>
                     <li>
@@ -55,69 +55,83 @@
                     </li>
                 </ol>
             </div>
-            <h2 class="title">素材</h2>
+            <h2 class="title" data-aos="fade" data-aos-duration="2000">素材</h2>
             <span class="sub">Materials</span>
-            <p class="explain">素材事業は、高品質、高性能な技術優位性の高い日本の電子部品・ 素材をサムスングループ及び協力会社様へ提供しています。 これらはやがて、スマートフォンやテレビなど、サムスンが誇る最先端製品を構成する一部となり、 お客様の生活を豊かにする一助を担っております。 また、サムスングループ以外の海外企業との取引及び韓国本社と連携したRe-Marketing / Recycle事業、半導体素材の現地化事業など、幅広い事業を行っています。</p>
-            <a href="">お問い合わせ</a>
-            <div class="info">
-                <dl>
-                    <dt>支援</dt>
-                    <dd>日本企業の電子部品・材料をサムスングループの生産工場へ供給するソーシング機能の提供、日本に購買拠点がない海外企業に対する購買代行業務、 サムスングループ向けに次世代技術·材料の紹介及び評価支援を行っています。</dd>
+            <p class="explain" data-aos="fade" data-aos-delay="300">素材事業は、高品質、高性能な技術優位性<br class="mobile" />の高い日本の電子部品・ <br class="web" />素材をサムスング<br class="mobile" />ループ及び協力会社様へ提供しています。 <br />これらはやがて、スマートフォンやテレビ<br class="mobile" />など、サムスンが誇る最先端製品を構成す<br class="mobile" />る一部となり、 <br class="web" />お客様の生活を豊かにする<br class="mobile" />一助を担っております。 <br />また、サムスングループ以外の海外企業と<br class="mobile" />の取引及び韓国本社と連携した<br class="mobile" />Re-Marketing / Recycle事業、<br class="web" />半導体素材<br class="mobile" />の現地化事業など、幅広い事業を行ってい<br class="mobile" />ます。</p>
+            <div class="c_btn_wrap" data-aos="fade-up" data-aos-delay="300">
+                <a href="/html/about-us/contact-info1.html" class="c_btn2">お問い合わせ</a>
+            </div>
+            <div class="info" data-aos="fade" data-aos-delay="500">
+                <dl data-aos="fade-up" data-aos-delay="900">
+                    <dt>ソーシング/支援事業</dt>
+                    <dd>日本企業の電子部品・材料をサムスング<br class="mobile"/>ループの生<br class="web" />産工場へ供給するソーシング機<br class="mobile"/>能の提供、日本に購<br class="web" />買拠点がない<br class="mobile"/>海外企業に対する購買代行業務、 <br class="web" />サムスン<br class="mobile"/>グループ向けに次世代技術·材料の紹介及<br class="mobile"/>び<br class="web" />評価支援を行っています。</dd>
                 </dl>
-                <dl>
+                <dl data-aos="fade-up" data-aos-delay="1100">
                     <dt>Re-Marketing/Recycle事業</dt>
-                    <dd>中古半導体装置の売買やバッテリースクラップの回収·精錬など、遊休化された資産や資源を再活用する事業を行っています。</dd>
+                    <dd>中古半導体装置の売買やバッテリースク<br class="mobile"/>ラップの回<br class="web" />収·精錬など、<br class="mobile"/>遊休化された資産や資源を再活用する<br class="web" />事業を行っています。</dd>
                 </dl>
-                <dl>
+                <dl data-aos="fade-up" data-aos-delay="1150">
                     <dt>半導体素材現地化事業</dt>
-                    <dd>サムスン電子のニーズに合わせ、半導体工場の近郊に材料メーカ様の工場を誘致、 海外進出を支援する事業を 行っています。</dd>
+                    <dd>サムスン電子のニーズに合わせ、半導体工<br class="mobile"/>場の近郊<br class="web" />に材料メーカ様の工場を誘致、 <br class="web" />海<br class="mobile"/>外進出を支援する事業を 行っています。</dd>
                 </dl>
             </div>
         </section>
-        <section class="sub_cont2" data-aos="fade-up">
-            <b class="title"></b>
+        <section class="sub_cont business material" data-aos="fade-up">
+            <b class="title">品目</b>
             <ul>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="100">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_industrial1.jpg" alt="industrial image" title="industrial image"/>
+                        <img src="../../resources/img/sub/img_material_item1.jpg" alt="industrial material image" title="industrial material image"/>
                     </div>
-                    <b>ディスプレイ資材</b>
-                    <p>TV, IT製品(Note PC, Monitor, Tablet, Mobile)の主要部材である「偏光板」に使用される光学フィルム及び粘/接着剤、添加剤等のケミカル製品、CMOS Image Sensor用カラーレジスト原料 （顔料、バインダー）を サムスングループ関係会社へ販売しています。</p>
+                    <div class="text">
+                        <b>ディスプレイ資材</b>
+                        <p>TV, IT製品(Note PC, Monitor, Tablet, Mobile)の主<br class="web" />要部材である「偏光板」に使用される光学フィル<br class="web" />ム及び粘/接着剤、添加剤等のケミカル製品、<br class="web" />CMOS Image Sensor用カラーレジスト原料 <br class="web" />（顔料、バインダー）を <br class="web" />サムスングループ関係会社へ販売しています。</p>
+                    </div>
                 </li>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="200">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_industrial2.jpg" alt="industrial image" title="industrial image"/>
+                        <img src="../../resources/img/sub/img_material_item2.jpg" alt="industrial material image" title="industrial material image"/>
                     </div>
-                    <b>半導体資材</b>
-                    <p>サムスン電子、SK Hynix等の韓国大手半導体 メーカ向けに前工程用関連原材料、後工程 パッケージ工程用EMC(Epoxy Molding Compound ： 封止材) Silicaやスマートフォン 基板向け電解銅箔等、半導体関連素材を サムスングループ関係会社に販売しています。</p>
+                    <div class="text">
+                        <b>半導体資材</b>
+                        <p>サムスン電子、SK Hynix等の韓国大手半導体 <br class="web" />メーカ向けに前工程用関連原材料、後工程 <br class="web" />パッケージ工程用EMC(Epoxy Molding <br class="web" />Compound ： 封止材) Silicaやスマートフォン <br class="web" />基板向け電解銅箔等、半導体関連素材を <br class="web" />サムスングループ関係会社に販売しています。</p>
+                    </div>
                 </li>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="300">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_industrial3.jpg" alt="industrial image" title="industrial image"/>
+                        <img src="../../resources/img/sub/img_material_item3.jpg" alt="industrial material image" title="industrial material image"/>
                     </div>
-                    <b>プリンター/複合機資材</b>
-                    <p>トナー製品（重合・粉砕）及び トナー生産に必要な各種原料の他、センサー部品など、 プリンター/複合機に使用される部品 材料を海外メーカ向けに販売しています。</p>
+                    <div class="text">
+                        <b>プリンター/複合機資材</b>
+                        <p>トナー製品（重合・粉砕）及び トナー生産に必<br class="web" />要な各種原料の他、センサー部品など、 <br class="web" />プリンター/複合機に使用される部品 <br class="web" />材料を海外メーカ向けに販売しています。</p>
+                    </div>
                 </li>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="400">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_industrial4.jpg" alt="industrial image" title="industrial image"/>
+                        <img src="../../resources/img/sub/img_material_item4.jpg" alt="industrial material image" title="industrial material image"/>
                     </div>
-                    <b>リサイクル金属素材</b>
-                    <p>韓国で精錬したバッテリーリサイクル原料由来のニッケル、コバルト、リチウム関連製品の 日本輸入販売の他、日本国内で発生した廃 バッテリー·工程スクラップ由来の ブラックマスの韓国向け販売、その他ネオジム等希土類を始めとした多様な金属製品の輸出入 事業の開発を行っております。</p>
+                    <div class="text">
+                        <b>リサイクル金属素材</b>
+                        <p>韓国で精錬したバッテリーリサイクル原料由来の<br class="web" />ニッケル、コバルト、リチウム関連製品の <br class="web" />日本輸入販売の他、日本国内で発生した廃 <br class="web" />バッテリー·工程スクラップ由来の <br class="web" />ブラックマスの韓国向け販売、その他ネオジム等<br class="web" />希土類を始めとした多様な金属製品の輸出入 <br class="web" />事業の開発を行っております。</p>
+                    </div>
                 </li>
-                <li>
-                    <div class="img">
-                        <img src="../../resources/img/sub/img_industrial5.jpg" alt="industrial image" title="industrial image"/>
+                <li data-aos="fade-up" data-aos-delay="500">
+                    <div class="img">        
+                        <img src="../../resources/img/sub/img_material_item5.jpg" alt="industrial image" title="industrial image"/>
                     </div>
-                    <b>工程素材開発現地化</b>
-                    <p>サムスングループ関係会社の様々な事業を ターゲットとして、日本国内の高機能素材や 次世代材料を発掘、紹介からサプライチェーン 構築までの製品販売のマーケテイングと共に サムスングループ関係会社の工場近郊に 各種材料の生産拠点を誘致する現地化事業を 行っております。</p>
+                    <div class="text">
+                        <b>工程素材開発現地化</b>
+                        <p>サムスングループ関係会社の様々な事業を <br class="web" />ターゲットとして、日本国内の高機能素材や <br class="web" />次世代材料を発掘、紹介からサプライチェーン <br class="web" />構築までの製品販売のマーケテイングと共に <br class="web" />サムスングループ関係会社の工場近郊に <br class="web" />各種材料の生産拠点を誘致する現地化事業を 行っております。</p>
+                    </div>
                 </li>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="600">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_industrial6.jpg" alt="industrial image" title="industrial image"/>
+                        <img src="../../resources/img/sub/img_material_item6.jpg" alt="industrial image" title="industrial image"/>
                     </div>
-                    <b>半導体中古装置</b>
-                    <p>日本国内の半導体メーカーの工場から 売却される、中古半導体製造装置の国内外 需要家向け販売、また、自社及び協力社で 保有中の中古装置の国内需要家向け マーケティングを行っております。</p>
+                    <div class="text">
+                        <b>半導体中古装置</b>
+                        <p>日本国内の半導体メーカーの工場から <br class="web" />売却される、中古半導体製造装置の国内外 <br class="web" />需要家向け販売、また、自社及び協力社で <br class="web" />保有中の中古装置の国内需要家向け <br class="web" />マーケティングを行っております。</p>
+                    </div>
                 </li>
             </ul> 
         </section>
