--- a/html/business/steel.html
+++ b/html/business/steel.html
@@ -41,7 +41,7 @@
     <!-- [E] header -->
 
     <div class="contents sub">
-        <section class="sub_cont sub_title2" data-aos="fade" data-aos-duration="2000">         
+        <section class="sub_cont sub_title2 steel">         
             <div class="breadcrumbs" role="navigation">
                 <ol>
                     <li>
@@ -55,44 +55,52 @@
                     </li>
                 </ol>
             </div>
-            <h2 class="title">鉄鋼</h2>
+            <h2 class="title" data-aos="fade" data-aos-duration="2000">鉄鋼</h2>
             <span class="sub">Steel</span>
-            <p class="explain">鉄鋼事業は、50年以上にわたる鉄鋼トレーディングの経験と長年培ったノウハウや業界知識を持ち、  30か国以上に及ぶ幅広い地域や分野で事業を展開しています。 取り扱い鉄鋼製品は、船舶、橋梁、ビル、タンク等の大型案件からテレビ、厨房、各種パイプ等、多種多様な用途に使用されています。</p>
-            <a href="">お問い合わせ</a>
-            <div class="info">
-                <dl>
+            <p class="explain" data-aos="fade" data-aos-delay="300">鉄鋼事業は、50年以上にわたる鉄鋼トレー<br class="mobile" />ディングの経験と長年培ったノウハウや業<br class="mobile" />界知識を持ち、<br class="web" />30 か国以上に及ぶ幅広い地<br class="mobile" />域や分野で事業を展開しています。 <br />取り扱い鉄鋼製品は、船舶、橋梁、ビル、<br class="mobile" />タンク等の大型案件からテレビ、厨房、各<br class="mobile" />種パイプ等、多種多<br class="web" />様な用途に使用されて<br class="mobile" />います。</p>
+            <div class="c_btn_wrap" data-aos="fade-up" data-aos-delay="300">
+                <a href="/html/about-us/contact-info1.html" class="c_btn2">お問い合わせ</a>
+            </div>
+            <div class="info" data-aos="fade" data-aos-delay="500">
+                <dl data-aos="fade-up" data-aos-delay="800">
                     <dt>輸出事業</dt>
-                    <dd>韓国を中心に世界各地に日本の鋼材を供給しており 造船、エネルギー、インフラ、自動車、家電などに使われ 日本の鉄鋼メーカーと需要家の長期的な取引に貢献しています。</dd>
+                    <dd>韓国を中心に世界各地に日本の鋼材を供給しており <br class="web" />造船、エネルギー、インフラ、自動車、家電などに使われ <br class="web" />日本の鉄鋼メーカーと需要家の長期的な取引に貢献しています。</dd>
                 </dl>
-                <dl>
+                <dl data-aos="fade-up" data-aos-delay="1000">
                     <dt>輸入事業</dt>
-                    <dd>1970年代から韓国·POSCOを中心とした鉄鋼製品を日本国内で販売してます。 サムスン物産との連携により日本の需要家のニーズに合わせ 韓国、中国など各国の製品を提案しています。</dd>
+                    <dd>1970年代から韓国·POSCOを中心とした鉄鋼製品を日本国内で販売してます。 <br />サムスン物産との連携により日本の需要家のニーズに合わせ <br class="web" />韓国、中国など各国の製品を提案しています。</dd>
                 </dl>
             </div>
         </section>
-        <section class="sub_cont2" data-aos="fade-up">
+        <section class="sub_cont business steel" data-aos="fade-up">
             <b class="title">品目</b>
-            <ul>
-                <li>
+            <ul> 
+                <li data-aos="fade-up" data-aos-delay="100">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_steel1.jpg" alt="steel image" title="steel image" />
+                        <img src="../../resources/img/sub/img_steel_item1.jpg" alt="steel image" title="steel image" />
                     </div>
-                    <b>コイル</b>
-                    <p>鋼管、建材、自動車、電機、自動車、 鋼製家具、鋼製容器用</p>
+                    <div class="text">
+                        <b>薄板 (熱延コイル、酸洗コイル、<br class="web"/> 冷延コイル、亜鉛メッキコイル)</b>
+                        <p>鋼管、建材、自動車、電機、自動車、 <br />鋼製家具、鋼製容器用</p>
+                    </div>
                 </li>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="200">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_steel2.jpg" alt="steel image" title="steel image" />
+                        <img src="../../resources/img/sub/img_steel_item2.jpg" alt="steel image" title="steel image" />
                     </div>
-                    <b>厚板</b>
-                    <p>造船、LNGタンク、建築用</p>
+                    <div class="text">
+                        <b>厚板</b>
+                        <p>造船、LNGタンク、建築用</p>
+                    </div>
                 </li>
-                <li>
+                <li data-aos="fade-up" data-aos-delay="300">
                     <div class="img">
-                        <img src="../../resources/img/sub/img_steel3.jpg" alt="steel image" title="steel image" />
+                        <img src="../../resources/img/sub/img_steel_item3.jpg" alt="steel image" title="steel image" />
                     </div>
-                    <b>ステンレス</b>
-                    <p>自動車排気管、電子機器、厨房用品用</p>
+                    <div class="text">
+                        <b>ステンレス</b>
+                        <p>自動車排気管、電子機器、厨房用品用</p>
+                    </div>
                 </li>
             </ul> 
         </section>
