--- a/html/device_test.html
+++ b/html/device_test.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile-Detect.js & jQuery 예시</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="mobile-detect.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.5/mobile-detect.min.js"></script>
+
 </head>
 <body>
     <h1>기기 종류 확인</h1>
